--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Happy Birthday</h1>
     <h2>From BdayBuddy</h2>
-    <p>Happy Birthday to you!</p>
-    <p>Hope you have a great day and a wonderful year ahead.</p>
+    <p>Need help?</p>
+    <p>Please contact me by email: cagriaktpe@gmail.com</p>
     <p>Regards,</p>
     <p>BdayBuddy</p>
 </body>
